# proposal-loan

./: .gitignore  README.md  cabal.project  flake.nix  proposal-loan.cabal
app/: Main.hs
nix/: outputs.nix  project.nix  shell.nix
src/: ProposalLend.hs
src/CrowdProposal/: NodeSpending.hs  Utils.hs
